--- a/chat-app/package.json
+++ b/chat-app/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-scroll-area": "^1.2.0",
@@ -26,8 +27,10 @@
     "lucide-react": "^0.454.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.1",
+    "prop-types": "^15.8.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.4.0",
     "react-lottie": "^1.2.4",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
@@ -63,7 +66,7 @@
   },
   "scripts": {
     "dev": "refine dev",
-    "build": "babel src --out-dir build",
+    "build": "tsc && refine build",
     "start": "refine start",
     "refine": "refine"
   },
